Adds view changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,8 @@
     </li>
 </ul>
 
-<!-- <button type="button" (click)="addPeople()">Add People</button> -->
+<button type="button" (click)="sayHello()">Hello</button>
+
+<!-- <h3>From Root: {{people}}</h3> -->
 
 <router-outlet></router-outlet>
