fixes rouing issue of micro apps

--- a/base-app/src/app/app.component.html
+++ b/base-app/src/app/app.component.html
@@ -1,9 +1,19 @@
 
 Base app--
+<nav>
+  <ul>
+    <!-- <li><a href="javascript:void(0)" (click)="load('app-list-people')">People</a></li>
+    <li><a href="javascript:void(0)" (click)="load('micro-app-login')">Login</a></li> -->
+
+    <li><a href="#/app-people/list">People</a></li>
+    <li><a href="#/auth/login">Login</a></li>
+  </ul>
+</nav>
 <div class="main-panel">
   <div id="container" class="container">
     <!-- Web Components go here -->
   </div>
 </div>
 
-<router-outlet></router-outlet>
+
+<!-- <router-outlet></router-outlet> -->
