--- a/base-app/src/app/app.component.html
+++ b/base-app/src/app/app.component.html
@@ -1,19 +1,69 @@
-
-Base app--
-<nav>
-  <ul>
-    <!-- <li><a href="javascript:void(0)" (click)="load('app-list-people')">People</a></li>
-    <li><a href="javascript:void(0)" (click)="load('micro-app-login')">Login</a></li> -->
-
-    <li><a href="#/app-people/list">People</a></li>
-    <li><a href="#/auth/login">Login</a></li>
-  </ul>
+<nav class="navbar navbar-expand-md navbar-dark sticky-top bg-dark p-0">
+  <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">XACBANK</a>
+  
+  <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Dashboard <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Profile</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Settings</a>
+        <div class="dropdown-menu" aria-labelledby="dropdown01">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+        </div>
+      </li>
+    </ul>
+  </div>
 </nav>
-<div class="main-panel">
-  <div id="container" class="container">
-    <!-- Web Components go here -->
+
+<div class="container-fluid">
+  <div class="row">
+    <nav class="col-md-2 sidebar">
+      <div class="sidebar-sticky">
+        <ul class="nav flex-column">
+          <li class="nav-item">
+            <a class="nav-link active" href="#/app-people/list">People</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#/auth/login">Login</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <main role="main" class="col-md-9 ml-sm-auto col-lg-10 pt-3 px-3">
+      <div class="d-flex justify-content-between flex-wrap flex-md-nowrap pb-2 mb-3">
+        <div class="main-panel">
+          <ng-container *ngIf="isBaseAppRoutes; else microAppContainer">
+            <div id="base-container">
+              <h3>Dashboard</h3>
+            </div>
+          </ng-container>
+          <ng-template #microAppContainer>
+            <div id="appContainer">
+              <!-- Web Components go here -->
+            </div>
+          </ng-template>
+        </div>
+      </div>
+    </main>
   </div>
 </div>
 
+
+<!-- <nav>
+  <ul>
+    <li><a href="javascript:void(0)" (click)="load('app-list-people')">People</a></li>
+    <li><a href="javascript:void(0)" (click)="load('micro-app-login')">Login</a></li>
+
+    <li><a href="#/app-people/list">People</a></li>
+    <li><a href="#/auth/login">Login</a></li>
+    
+  </ul>
+</nav> -->
 
 <!-- <router-outlet></router-outlet> -->
